--- a/assets/css/bahaypahina/style.css
+++ b/assets/css/bahaypahina/style.css
@@ -7,13 +7,32 @@
 header{
     min-height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),
-    url(img/bg.jpg) center/cover no-repeat fixed; /* #222831; */
+    url(./bg.jpg) center/cover no-repeat fixed;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
 }
 header a{
     color: #ffffff;
+}
+.title{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+    letter-spacing: 2px;
+}
+.main-title{
+    font-size: 3rem;
+    line-height: 1.2;
+    letter-spacing: 4px;
+    font-weight: 900;
+}
+.main-title span{
+    color: #ffff80;
+    font-weight: 900;
 }
 /* style in navigation */
 .navbar{
@@ -36,11 +55,12 @@ header a{
     padding-right: 1.2rem;
     padding-left: 1.2rem;
     font-weight: 400;
+    /* text-transform: uppercase; */
     letter-spacing: 2px;
     text-decoration: none;
 }
 .navbar-nav a:hover{
-    color: #febc58;
+    color: /* #F05454; */ #febc58;
     transform: scale(1.1);
 }
 .navbar-toggler {
@@ -49,8 +69,34 @@ header a{
 .fa-bars{
     color: #fff;
 }
+.title p{
+    padding: 1rem 0 2rem 0;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    font-weight: 400;
+    word-spacing: 3px;
+    line-height: 1.2;
+}
+.title .button {
+    width: 120px;
+    padding: 8px 20px;
+    background: none;
+    color: #fff;    
+    border: 1px solid #fff;
+    border-radius: 25px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+    text-decoration: none;
+    
+}
+.title .button:hover{
+    color: #1e1e1e;
+    background: #fff;
+    border: 1px solid #333;
+    transform: scale(1.1);
+}
 
-/* style in search bar */
 ::placeholder{
     color: #1e1e1e;
     padding:5px;
@@ -77,32 +123,28 @@ header a{
     text-align: left;
 }
 .search-btn:hover{
-    color: #febc58;
+    color: /* #F05454; */ #febc58;
 }
 
-/* style in content */
-.container{
-    background: rgba(255, 255, 255, 0.481);
-    border-radius: 30px;
+/* style in carousel */
+.content{
+    padding: 2rem 1rem 2rem 1rem;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: #f2e5d4;
 }
-.btn1{
-    border: none;
-    outline: none;
-    height: 50px;
-    width: 100%;
-    background-color: black;
-    color: #fff;
-    border-radius: 4px;
+#contentsection .post-heading h3 {
+    padding-bottom: 30px;
     font-weight: bold;
+    letter-spacing: 10px;
+    color: #00303F;
 }
-.btn1:hover{
-    background: #fff;
-    border: 1px solid;
-    color: black;
+.carousel-item img{
+    transition: transform .4s;
 }
-.form-row a, span{
-    color: rgba(0, 0, 255, 0.802);
-    text-decoration: none; 
+.carousel-item img:hover{
+    transform:scale(1.3)
 }
 
 /* style in footer */
