--- a/assets/css/signup/style.css
+++ b/assets/css/signup/style.css
@@ -7,7 +7,7 @@
 header{
     min-height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),
-    url(img/bg.jpg) center/cover no-repeat fixed; /* #222831; */
+    url(./bg.jpg) center/cover no-repeat fixed; /* #222831; */
     display: flex;
     flex-direction: column;
     justify-content: stretch;
