--- a/assets/css/addproject/style.css
+++ b/assets/css/addproject/style.css
@@ -14,6 +14,7 @@ header{
 }
 header a{
     color: #ffffff;
+    text-decoration: none;
 }
 /* style in navigation */
 .navbar{
@@ -99,13 +100,13 @@ header a{
 }
 .container .button{ 
     padding: 8px 15px;
-    background-color: #111111;
+    background-color: white;
     margin-bottom: 20px;
     text-decoration: none;
 }
 .container .button:hover {
-    color: #111111;
-    background: white;
+    color: white;
+    background: black;
     border: 1px solid #111111;
 }
 
