Added Improved FolioHub View User Page [Updated]

--- a/application/views/FRONT-END Folder/FolioHub VIEW USER/index-landicho-viewuser-page.html
+++ b/application/views/FRONT-END Folder/FolioHub VIEW USER/index-landicho-viewuser-page.html
@@ -81,7 +81,7 @@
                 </button>
             </div><br>
               
-            <p>A hardworking and responsible college student with a great intrapersonal skill. Currently working on my interpersonal skill but it is not bad as you imagine as it is vital skill in IT world. Despite of that, I always able to execute well the tasks that are given to me.</p>
+            <p>I am Iris Landicho, a third year Computer Science student from TUP Manila. My interests and hobbies are haywire. I do stuffs in all sorts but never got the chance to be good at it. But I at least try my hardest to help my peers with all the opportunities I have.</p>
 
             <div class="for-buttons">
               <button type="button" class="button">
