Added Improved FolioHub No Project Found Page

--- a/application/views/FRONT-END Folder/FolioHub NO PROJECT FOUND/index-noprojectfound.html
+++ b/application/views/FRONT-END Folder/FolioHub NO PROJECT FOUND/index-noprojectfound.html
@@ -12,8 +12,8 @@
     <div>
         <img class="image" src="img/vector-image-pagenotfound.png">
         <div class="wrapper">
-            <h1>OOPS! Project Not Found</h1>
-            <p class="message">We're sorry, we can't find the page you're looking for.</p>
+            <h1>OOPS! No Project Found</h1>
+            <p class="message">We're sorry, we couldn't find any results.</p>
             <a href="index-noprojectfound.html" class="btn-goback">Go Back to Home</a>
         </div>
     </div>
