--- a/assets/css/inbox/style-inbox.css
+++ b/assets/css/inbox/style-inbox.css
@@ -9,7 +9,7 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="<?php echo base_url(); ?>assets/css/inbox/style-inbox.css">
+	<link rel="stylesheet" href="style-inbox.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Goblin+One&family=Noto+Serif+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600;700&family=Ranchers&family=Slackey&family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -29,10 +29,10 @@
                             <a href="<?php echo base_url()."messages/addMessage"?>"><i class="fa fa-pen"></i> Compose</a>
                             </li>
                             <li>
-                            <a href='<?php echo base_url()."messages/inbox"?>'><i class="fa fa-inbox">Inbox </i> </a>
+                            <a href='<?php echo base_url()."messages/outbox"?>'><i class="fa fa-inbox">Sent </i> </a>
                             </li>
                             <li id="inbox-message">
-                            <a href='<?php echo base_url()."messages/outbox"?>'><i class="fa fa-inbox">Sent </i> </a>
+                            <a href='<?php echo base_url()."messages/inbox"?>'><i class="fa fa-inbox">Inbox </i> </a>
                             </li>
                         </ul>
                     </div>	
@@ -52,7 +52,7 @@
                                 <span class="button-icon">
                                   <ion-icon name="home-outline"></ion-icon>
                                 </span>
-                                <span class="button-text"><a class="sect" href="<?php echo base_url()?>">Home</a></span>
+                                <span class="button-text"><a class="sect" href="<?php echo base_url()."users/profile"?>">Go to Profile</a></span>
                               </button>
                             </div>
                             
