--- a/application/views/FRONT-END Folder/FolioHub Account Settings/index.html
+++ b/application/views/FRONT-END Folder/FolioHub Account Settings/index.html
@@ -11,7 +11,6 @@
 	<link rel="icon" href="img/foliohub-logo.png">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
-  	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Goblin+One&family=Noto+Serif+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600;700&family=Ranchers&family=Slackey&family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 	<section class="py-5">
@@ -144,8 +143,8 @@
 		</div>
 	
 	</section>
-
-
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/script.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
