--- a/application/views/FRONT-END Folder/HOMEPAGE-DEVPAGE/index.html
+++ b/application/views/FRONT-END Folder/HOMEPAGE-DEVPAGE/index.html
@@ -1,123 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>FolioHub | HOME</title>
-   <link rel="icon" href="img/foliohub-logo.png">
-   <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>FolioHub | DEVELOPERS</title>
+  <link rel="icon" href="img/foliohub-logo.png">
+  <link rel="stylesheet" href="style-dev-page.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
 
 <header>
-   <!-- navigation -->
+    <!-- navigation -->
   <div class="wrapper">
-    <nav>
-      <input type="checkbox" id="show-search">
-      <input type="checkbox" id="show-menu">
-      <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
+   <nav>
+     <input type="checkbox" id="show-search">
+     <input type="checkbox" id="show-menu">
+     <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
 
-      <div class="content">
-      <div class="logo"><a href="#">
-		<img src="img/foliohub-logo.png" width="30" height="30">
-		FolioHub</a></div>
-        <ul class="links">
-          <li>
-            <a href="#" class="navigation-link">Browse</a>
-            <input type="checkbox" id="show-features">
-            <label for="show-features">Browse</label>
-			      <ul>
-                  <li><a href="#">Projects</a></li>
-                  <li><a href="#">Developers</a></li>
-               </ul>
+     <div class="content">
+     <div class="logo"><a href="#">
+     <img src="img/foliohub-logo.png" width="30" height="30">
+     FolioHub</a></div>
+       <ul class="links">
+         <li>
+           <a href="index.html" class="navigation-link">Go Back</a>
+           <input type="checkbox" id="show-features">
+           <label for="show-features">Go Back</label>
          </li>
-            <li><a href="#">Sign In</a></li>
-		      <li><a href="#" class="for-join">Join Us</a></li>
-        </ul>
+         <li><a href="#">Sign In</a></li>
+       <li><a href="#" class="for-join">Join Us</a></li>
+       </ul>
+     </div>
+
+     <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
+
+     <form action="#" class="search-box">
+       <input type="text" placeholder="Type Something to Search..." required>
+     </form>
+    
+   </nav>
+ </div>
+</header>
+<!-- content -->
+<div class="developer" id="developer-section">
+   <div class="heading text-center">
+      <h3>The Developers</h3>
+
+<div class="section-container" id="content-section">
+  <div class="columns content">
+     <div class="content-container">
+        <h1 class="dev-name">Elaine S. Andus</h1>
+        <p class="position">Front-end developer</p>
+        <p>
+           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis veniam iste consequuntur, quis assumenda quasi mollitia, consectetur ratione reprehenderit asperiores tempora voluptates necessitatibus nihil, exercitationem laudantium reiciendis laboriosam est voluptas tempore aliquam id quo repudiandae? Aspernatur ipsam reprehenderit quaerat.
+        </p>
+     </div>
+  </div>
+    <div class="columns image">
+      <img src="img/andus-pic.jpg" height="80%">
+     &nbsp;
+    </div>
+</div>
+
+<div class="section-container">
+    <div class="columns image">
+      <img src="img/dezguman-pic.png"height="80%">
+     &nbsp;
+  </div>
+  <div class="columns content">
+     <div class="content-container">
+        <h1 class="dev-name">Lorence Joy De Guzman</h1>
+        <p class="position">Front-end developer</p>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis veniam iste consequuntur, quis assumenda quasi mollitia, consectetur ratione reprehenderit asperiores tempora voluptates necessitatibus nihil, exercitationem laudantium reiciendis laboriosam est voluptas tempore aliquam id quo repudiandae? Aspernatur ipsam reprehenderit quaerat.
+        </p>
+     </div>
+  </div>
+</div>
+
+<div class="section-container" id="content-section">
+   <div class="columns content">
+      <div class="content-container">
+         <h1 class="dev-name">Iris Landicho</h1>
+         <p class="position">Front-end developer</p>
+         <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis veniam iste consequuntur, quis assumenda quasi mollitia, consectetur ratione reprehenderit asperiores tempora voluptates necessitatibus nihil, exercitationem laudantium reiciendis laboriosam est voluptas tempore aliquam id quo repudiandae? Aspernatur ipsam reprehenderit quaerat.
+         </p>
       </div>
+   </div>
+     <div class="columns image">
+       <img src="img/landicho-pic.jpg" height="80%">
+      &nbsp;
+     </div>
+</div>
 
-      <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
+      <div class="section-container">
+         <div class="columns image">
+           <img src="img/herrero-pic.jpg" height="80%">
+          &nbsp;
+       </div>
+       <div class="columns content">
+          <div class="content-container">
+             <h1 class="dev-name">Wendell Herrero</h1>
+             <p class="position">Back-end developer</p>
+             <p>
+               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis veniam iste consequuntur, quis assumenda quasi mollitia, consectetur ratione reprehenderit asperiores tempora voluptates necessitatibus nihil, exercitationem laudantium reiciendis laboriosam est voluptas tempore aliquam id quo repudiandae? Aspernatur ipsam reprehenderit quaerat.
+             </p>
+          </div>
+       </div>
+     </div>
+     
+     <div class="section-container" id="content-section">
+        <div class="columns content">
+           <div class="content-container">
+              <h1 class="dev-name">Patrick Yee</h1>
+              <p class="position">Back-end developer</p>
+              <p>
+                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis veniam iste consequuntur, quis assumenda quasi mollitia, consectetur ratione reprehenderit asperiores tempora voluptates necessitatibus nihil, exercitationem laudantium reiciendis laboriosam est voluptas tempore aliquam id quo repudiandae? Aspernatur ipsam reprehenderit quaerat.
+              </p>
+           </div>
+        </div>
+          <div class="columns image">
+            <img src="img/yee-pic.jpg" height="80%">
+           &nbsp;
+          </div>
+     </div>
 
-      <form action="#" class="search-box">
-        <input type="text" placeholder="Type Something to Search..." required>
-      </form>
-      
-    </nav>
+     <div class="section-container">
+      <div class="columns image">
+        <img src="img/rosales-pic.png" height="80%">
+       &nbsp;
+    </div>
+    <div class="columns content">
+       <div class="content-container">
+          <h1 class="dev-name">Earl Benjamin Rosales</h1>
+          <p class="position">Back-end developer</p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis veniam iste consequuntur, quis assumenda quasi mollitia, consectetur ratione reprehenderit asperiores tempora voluptates necessitatibus nihil, exercitationem laudantium reiciendis laboriosam est voluptas tempore aliquam id quo repudiandae? Aspernatur ipsam reprehenderit quaerat.
+          </p>
+       </div>
+    </div>
+  </div>
+  
+  <div class="section-container" id="content-section">
+     <div class="columns content">
+        <div class="content-container">
+           <h1 class="dev-name">Jehiel Caspillan</h1>
+           <p class="position">Back-end developer</p>
+           <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis veniam iste consequuntur, quis assumenda quasi mollitia, consectetur ratione reprehenderit asperiores tempora voluptates necessitatibus nihil, exercitationem laudantium reiciendis laboriosam est voluptas tempore aliquam id quo repudiandae? Aspernatur ipsam reprehenderit quaerat.
+           </p>
+        </div>
+     </div>
+       <div class="columns image">
+         <img src="img/caspillan-pic.png" height="80%">
+        &nbsp;
+       </div>
   </div>
 
-      <!-- banner -->
-   <div class="title">
-      <div class="container">
-         <h1 class="main-title"><span>Folio</span>Hub</h1>
-         <p> A Wonderful place to showcase, explore, and discover. </p>
-         <a href="#content-section" type="button" class="button-explore">EXPLORE</a>
-      </div>
-   </div>
 </header>
-      <!-- end of the nav and banner -->
 
-      <!-- content -->
-   <div class="section-container" id="content-section">
-      <div class="columns content">
-         <div class="content-container">
-            <h1>what is folioHub</h1>
-            <p>
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore rem sint reiciendis consequatur maiores praesentium quibusdam blanditiis in nam officiis a eos repellat mollitia, deserunt perferendis corrupti incidunt aut error eaque at? Quaerat laborum doloribus tempora recusandae expedita corporis. Veritatis fuga necessitatibus dolorum ullam, repudiandae facilis quam ratione voluptas soluta, earum cupiditate! Possimus itaque provident ullam fugit commodi fugiat consequatur quis quam atque consectetur harum dolorem reprehenderit explicabo non laudantium amet odio numquam id qui iusto sequi, aut adipisci sed.
-            </p>
-         </div>
-      </div>
-         <div class="columns image"><img src="img/vector1.png" width="100%" height="100%">&nbsp;</div>
-   </div>
+   </div> 
+</div> 
 
-   <div class="section-container">
-      <div class="columns image"><img src="img/vector2.png" width="100%" height="100%">&nbsp;</div>
-      <div class="columns content">
-         <div class="content-container">
-            <h1>how folioHub works</h1>
-            <p>
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore rem sint reiciendis consequatur maiores praesentium quibusdam blanditiis in nam officiis a eos repellat mollitia, deserunt perferendis corrupti incidunt aut error eaque at? Quaerat laborum doloribus tempora recusandae expedita corporis. Veritatis fuga necessitatibus dolorum ullam, repudiandae facilis quam ratione voluptas soluta, earum cupiditate! Possimus itaque provident ullam fugit commodi fugiat consequatur quis quam atque consectetur harum dolorem reprehenderit explicabo non laudantium amet odio numquam id qui iusto sequi, aut adipisci sed.
-            </p>
-         </div>
-      </div>
-   </div>
-
-   <div class="section-container">
-      <div class="columns content">
-         <div class="content-container">
-            <h1>meet the team</h1>
-            <p>
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore rem sint reiciendis consequatur maiores praesentium quibusdam blanditiis in nam officiis a eos repellat mollitia, deserunt perferendis corrupti incidunt aut error eaque at? Quaerat laborum doloribus tempora recusandae expedita corporis. Veritatis fuga necessitatibus dolorum ullam, repudiandae facilis quam ratione voluptas soluta, earum cupiditate! Possimus itaque provident ullam fugit commodi fugiat consequatur quis quam atque consectetur harum dolorem reprehenderit explicabo non laudantium amet odio numquam id qui iusto sequi, aut adipisci sed.
-            </p>
-            <a href="index-dev-page.html" type="button" class="button-meet">Meet the team</a>
-         </div>
-      </div>
-      <div class="columns image"><img src="img/vector3.png" width="100%" height="100%">&nbsp;</div>
-   </div>
-
-   <div class="section-container">
-      <div class="columns image"><img src="img/vector4.png" width="100%" height="100%">&nbsp;</div>
-      <div class="columns content">
-         <div class="content-container">
-            <h1>Learn More</h1>
-            <p>
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore rem sint reiciendis consequatur maiores praesentium quibusdam blanditiis in nam officiis a eos repellat mollitia, deserunt perferendis corrupti incidunt aut error eaque at? Quaerat laborum doloribus tempora recusandae expedita corporis. Veritatis fuga necessitatibus dolorum ullam, repudiandae facilis quam ratione voluptas soluta, earum cupiditate! Possimus itaque provident ullam fugit commodi fugiat consequatur quis quam atque consectetur harum dolorem reprehenderit explicabo non laudantium amet odio numquam id qui iusto sequi, aut adipisci sed.
-            </p>
-            <a href="#" type="button" class="button-contact">Contact us!</a>
-         </div>
-      </div>
-   </div>
-
-      <!-- footer -->
-<footer>
-   <div class="socmed-links">
-         <a href="index.html" target="_blank"> <i class="fab fa-facebook-f"></i></a>
-         <a href="index.html" target="_blank"> <i class="fab fa-instagram"></i></a>
-         <a href="index.html" target="_blank"> <i class="fab fa-twitter"></i></a>
-         <a href="index.html" target="_blank"> <i class="fab fa-linkedin"></i></a>
-   </div>
-         <span>Copyright &copy;2021 FolioHub | All Rights Reserved</span>
-</footer>
 </body>
 </html>
