--- a/application/views/FRONT-END Folder/FolioHub ADD EDUCATION/index-add-education.html
+++ b/application/views/FRONT-END Folder/FolioHub ADD EDUCATION/index-add-education.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>FolioHub | ADD EDUCATION</title>
+	<title>FolioHub | EDUCATION</title>
 	<link rel="icon" href="img/foliohub-logo.png">
 
-	<link rel="stylesheet" href="style-educ-page.css">
+	<link rel="stylesheet" href="style-add-educ.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
   	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Goblin+One&family=Noto+Serif+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600;700&family=Ranchers&family=Slackey&family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -19,36 +19,53 @@
 			<img src="img/vector-image-educ.png">
 		</div>
 
-		<div class="signup-content">
+		<div class="addemployment-content">
 			<form>
-                <h2>Education</h2>
-				<div class="wrap-one">
-					<label>Year Start</label>
-					<input type="month" placeholder="2000" required>
-				</div>
-				<br>
-				<div class="wrap-one">
-					<label>Year End</label>
-					<input type="month" placeholder="2022" required>
-				</div>
-                <div class="wrap-two">
+				<h2>Education Information</h2>
+				<p>Please complete the following information.</p>
+				
+				<div class="wrap-two">
 					<label>School Name</label>
-					<input type="text" placeholder="Technological University of the Philippines" required>
-				</div>
-                <div class="wrap-two">
-					<label>Degree</label>
-					<input type="text" placeholder="Bachelor of Science" required>
+					<input type="text">
+					<span class="event-one"></span>
 				</div>
 				<div class="wrap-two">
-					<label>Course</label>
-					<input type="text" placeholder="Computer Science" required>
+					<label>Degree</label>
+					<input type="text">
+					<span class="event-one"></span>
 				</div>
+           		
+				<div class="wrap-two">
+					<label>Course</label>
+					<input type="text">
+					<span class="event-one"></span>
+				</div>
+
+				<div class="wrap-two">
+					<label>Date Start</label>
+					<input type="month">
+					<span class="event-one"></span>
+				</div>
+
+				<div class="wrap-one">
+					<div class="cont-one">
+						<label>Date End</label>
+						<input type="month">
+					</div>
+					<div class="cont-two">
+						<label>Up to Present</label>
+						<div class="for-present">&nbsp;
+							<input type="checkbox" class="checkbox-size"/><span class="event-one"></span>&nbsp;&nbsp;&nbsp;&nbsp;<span>Present</span> 
+						</div>
+					</div>
+				</div> 
 
 				<div class="for-buttons">
-					<button type="submit" class="button-next" href="">Add</button></button>
+					<a type="button" class="button-submit" href="index-addemployment.html">Submit</a></button>
 
-					<a type="button" class="button-cancel" href="">Cancel</a></button>
+					<a type="button" class="button-cancel" href="index-addemployment.html">Cancel</a></button>
 				</div>
+
 			</form>
         </div>
     </div>
