fixed autocomplete message, upload APPPATH, errors

--- a/assets/css-img/viewuser/style-viewuser-page.css
+++ b/assets/css-img/viewuser/style-viewuser-page.css
@@ -188,7 +188,7 @@ nav .content .links{
   align-items: center;
 }
 .main-content img {
-  height: auto;
+  height: 400px;
   width: auto;
   border-radius: 8.5%;
   margin: 0 3rem;
