--- a/assets/css-img/home-dev/style-home-logged.css
+++ b/assets/css-img/home-dev/style-home-logged.css
@@ -13,7 +13,7 @@ body{
 header{
   min-height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),
-  url(img/banner-bg.jpg) center/cover no-repeat fixed;
+  url(banner-bg.jpg) center/cover no-repeat fixed;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
