--- a/assets/css-img/messages/style-inbox.css
+++ b/assets/css-img/messages/style-inbox.css
@@ -205,5 +205,5 @@ body {
   } 
   .button-icon {
     font-size: 1.5em;
-    background: rgba(0, 0, 0, 0.08);
+    /* background: rgba(0, 0, 0, 0.08); */
   }
