--- a/assets/css-img/viewproject/style-viewproject-page.css
+++ b/assets/css-img/viewproject/style-viewproject-page.css
@@ -33,6 +33,7 @@ a{
   background: #fff;
   box-shadow: 2px 2px 4px rgba(0,0,0,0.9);
   transition: 0.2s;
+  min-height: 50vh;
 }
 .slider .card:hover{
   border-radius: 18px;
