--- a/assets/css-img/addproject/style-addproject-page.css
+++ b/assets/css-img/addproject/style-addproject-page.css
@@ -186,12 +186,13 @@ form{
 	font-family: 'Poppins', sans-serif;
 }
 .addproject-content h2{
+  padding-top: 3.5rem;
 	margin: 15px 0;
-	color: rgb(232, 217, 217);
 	text-transform: uppercase;
 	font-size: 2.5rem;
   font-family: 'Fredoka One';
   font-weight: lighter;
+  color: #fff;
 }
 .addproject-content p{
 	color: #999;
