--- a/assets/css-img/messages/style-compose.css
+++ b/assets/css-img/messages/style-compose.css
@@ -127,6 +127,7 @@ a{
 
 .btn-discard:hover{
 	background-position: right;
+    color: white;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4), 0 8px 20px 0 rgba(0, 0, 0, 0.20);
 }
 
