--- a/assets/css-img/messages/style-inbox.css
+++ b/assets/css-img/messages/style-inbox.css
@@ -44,7 +44,9 @@ body {
     letter-spacing: 1.2px;
     text-transform: uppercase;
 }
-
+a {
+    text-decoration: none;
+  }
 
 /* this is for inbox menu */
 .inbox .inbox-menu ul {
