--- a/assets/css-img/messages/style-view.css
+++ b/assets/css-img/messages/style-view.css
@@ -22,6 +22,9 @@ body {
 }
 
 /* style in content */
+a {
+  text-decoration: none;
+}
 .container-buttons{
     padding: 0 1rem 2rem 1rem; 
     margin-top:3rem;
